--- a/pom.xml
+++ b/pom.xml
@@ -62,9 +62,9 @@
             <version>1.15.3</version>
         </dependency>
         <dependency>
-            <groupId>org.openpnp</groupId>
-            <artifactId>opencv</artifactId>
-            <version>4.5.5-1</version>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>3.23.1</version>
         </dependency>
         <dependency>
             <groupId>ru.yandex.qatools.ashot</groupId>
